# grimoire

./: .gitignore  LICENSE  README.md  deploy.bash  grimoire.cabal  index.html  stack.yaml
articles/: 2019-04-19-xdg-base-directory-specification.markdown  2019-12-05-nix-shell-shebang.markdown  2020-10-11-configure-services-with-dhall.markdown
css/: default.css  highlight.css
src/: site.hs
templates/: archive.html  default.html  list-of-articles.html  list-of-projects.html  project.html
work-in-progress/: bash-scripting.markdown  command-line-productivity.markdown  notes-on-cli-design.markdown
