name:                 grimoire
version:              0.1.0.0
synopsis:             TODO
description:          TODO
homepage:             https://github.com/trskop/grimoire#readme
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
copyright:            (c) 2019 Peter Trško
category:             Blog
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:
    README.md

executable grimoire
  hs-source-dirs:       src
  main-is:              site.hs

  default-language:     Haskell2010
  default-extensions:
      BlockArguments
    , OverloadedStrings

  build-depends:
      base >= 4.7 && < 5
    , hakyll

  ghc-options:          -Wall -Werror -threaded
